--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
    
     </div>
     <button class="btn btn-primary w-100 py-2" type="submit">Summerize</button>
-    <p class="mt-5 mb-3 text-body-secondary">&copy; 2023 | Benergy systems</p>
+    
+    <p class="mt-5 mb-3 text-body-secondary">&copy; 2023 | Big Time Media</p>
   </form>
 </main>
 <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
